# agent-matrix

./: .gitignore  README.md
.github/: FUNDING.yml
.github/workflows/: release-bot-binary.yml
Agent0-1/: docker-compose.yml
certs/: .api-keys-NOCOPY  contabo-synapse.crt  contabo-synapse.key  contabo-synapse.ovpn  cybertribe-ca-chain.pem  test-client.ovpn
docs/legacy/: report.html
legacy-docs/legacy/: DISPLAY_NAME_FEATURE.md  agent-matrix-onboarding.md  agent0-1-cursor-migration-context.md  agent0-1-migration-plan.md  cursor-doc-update-context.md  cursor-federation-fix-context.md  ddwrt-openvpn-stepca-ops-guide.md  k8s-dns-debug-notes.md  matrix-homeserver-alternatives-research.md  synapse-ops-guide.md  sync-freeze-investigation-report.md  zero-touch-hardening-v3.17.md
migration/: README-agent0-1-g2s.md  docker-compose-agent0-1.yml  run-on-g2s-phases-2-8.sh
multi-instance-deploy/: create-instance.sh  decommission-instance.sh  multi-instance-guide.md  operations-manual.md  validate-instance.sh
multi-instance-deploy/archive/: continuwuity-Caddyfile  continuwuity-agent0-4-Caddyfile  continuwuity-agent0-4-compose.yml
multi-instance-deploy/docs/: Migration.md  agent-matrix-design-next.md  agent-matrix-design-v3-retired.md  (+13 more)
multi-instance-deploy/templates/matrix-bot/rust/: Cargo.toml  README.md
multi-instance-deploy/templates/matrix-bot/rust/src/: main.rs
networking/: README.md
sessons/: 2026-02-15-chat.txt  DNS-cilium-debug.timing  cleaned.txt  k8-135-cilium0213.timing  k8-135-synapse.timing  openVPN-session.txt  session.md  synapse-config.timing
(+46 files in other folders)
